# mirage

./: .gitattributes  .gitignore  LICENSE  README.md  config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: feishu-notify.yml
hallumap/: __init__.py  cli.py
hallumap/core/: analyzer.py  config.py  runner.py
hallumap/datasets/: generator.py
hallumap/datasets/questions/: common.json  cs.json  geography.json  halluqa_cn.json  halu_eval.json  history.json  literature.json  math.json  science.json  truthfulqa.json
hallumap/judges/: __init__.py  fuzzy_match.py  llm_judge.py  regex_judge.py
hallumap/providers/: __init__.py  deepseek.py  ollama.py  openai_provider.py  qwen.py  zhipu.py
hallumap/visualizer/: __init__.py  heatmap.py  html_report.py  radar.py  table.py
mirage/: __init__.py  cli.py
mirage/core/: __init__.py  analyzer.py  config.py  model.py  runner.py  scorer.py
mirage/datasets/: __init__.py  loader.py
mirage/datasets/questions/: halluqa_cn.json  halu_eval.json  truthfulqa.json
mirage/judges/: __init__.py  exact_match.py  fuzzy_match.py  llm_judge.py
mirage/providers/: __init__.py  deepseek.py  ollama.py  openai_provider.py  qwen.py  zhipu.py
mirage/visualizer/: __init__.py  heatmap.py  html_report.py
tests/: conftest.py  test_judges.py  test_model.py  test_runner.py
