[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirage"
version = "0.1.0"
description = "AI hallucination detector - one command to test any model"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Risaner" },
]
keywords = ["ai", "hallucination", "benchmark", "llm", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Risaner/mirage"
Repository = "https://github.com/Risaner/mirage"
Issues = "https://github.com/Risaner/mirage/issues"

[project.scripts]
mirage = "mirage.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["mirage"]
